Nav y principio de main.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Proyecto docker</title>
+	<link rel="stylesheet" type="text/css" href="docker.css">
 </head>
 <body>
-
+	<header>
+		<div>
+			<p><a href="#">New</a><a href="#">Announcing Docker Build Cloud: Develop up to 39X faster</a></p>
+			<p><a href="#">Docs</a> <a href="#">Get support</a> <a href="#">Contact sales</a></p>
+		</div>
+		<nav>
+			<a href="#">Docker</a>
+			<span>
+			<a href="#">Products</a>
+			<a href="#">Developers</a>
+			<a href="#">Pricing</a>
+			<a href="#">Blog</a>
+			<a href="#">About Us</a>
+			<a href="#">Partners</a>
+			</span>
+			<span>
+				<a href="#" class="boton_blanco">Sign in</a>
+				<a href="#" class="boton_azul">Get Started</a>
+			</span>
+		</nav>	
+	</header>
+	<main>
+		<div>
+			<p>Develop faster.</p>
+			<p>Run anywhere.</p>
+			<span>
+				<p>Build with the <a href="#">#1 most-used developer tool</a></p>
+			</span>
+		</div>
+	</main>
+	<footer>
+	
+	</footer>
 </body>
 </html>
