--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 			<span>
 				<p>Build with the <a href="#">#1 most-used developer tool</a></p>
 			</span>
+			<span>
+			<a href="#" class="boton_azul">Download for Windows</a>
+			<a href="#" class="boton_blanco">Learn more about Docker</a>
+			</span>
 		</div>
 	</main>
 	<footer>
