Añadido botones e icono

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
 	<header>
 		<div>
-			<p><a href="#">New</a><a href="#">Announcing Docker Build Cloud: Develop up to 39X faster</a></p>
-			<p><a href="#">Docs</a> <a href="#">Get support</a> <a href="#">Contact sales</a></p>
+			<img src="icon-new.svg">
+			<div>
+			<p><a href="#">Announcing Docker Build Cloud: Develop up to 39X faster →</a></p>
+			<p><a href="#">Docs</a><a href="#">Get support</a><a href="#">Contact sales</a></p>
+			</div>
 		</div>
 		<nav>
 			<a href="#">Docker</a>
@@ -36,8 +39,9 @@
 				<p>Build with the <a href="#">#1 most-used developer tool</a></p>
 			</span>
 			<span>
-			<a href="#" class="boton_azul">Download for Windows</a>
-			<a href="#" class="boton_blanco">Learn more about Docker</a>
+				<p>
+					<a href="#" class="boton_azul">Download for Windows</a>			<a href="#" class="boton_blanco">Learn more about Docker</a>
+				</p>
 			</span>
 		</div>
 	</main>
