Estructura html y fotos casi completa

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			</div>
 		</div>
 		<nav>
-			<a href="#">Docker</a>
 			<span>
+			<img src="docker_logo.png">
 			<a href="#">Products</a>
 			<a href="#">Developers</a>
 			<a href="#">Pricing</a>
@@ -32,21 +32,165 @@
 		</nav>	
 	</header>
 	<main>
-		<div>
-			<p>Develop faster.</p>
-			<p>Run anywhere.</p>
+		<section>
+			<h1>Develop faster.</h1>
+			<h2>Run anywhere.</h2>
 			<span>
 				<p>Build with the <a href="#">#1 most-used developer tool</a></p>
 			</span>
-			<span>
-				<p>
-					<a href="#" class="boton_azul">Download for Windows</a>			<a href="#" class="boton_blanco">Learn more about Docker</a>
-				</p>
-			</span>
-		</div>
+			<div>
+					<a href="#" class="boton_azul">Download for Windows</a>
+					<a href="#" class="boton_blanco">Learn more about Docker</a>
+			</div>
+		</section>
+		<section>
+			<p class="colorgrad">What is docker?</p>
+			<p>Accelerate how you build, share, and run applications</p>
+			<p>Docker helps developers build, share, run and verify applications anywhere - whithout tedious enviroment configuration or management.</p>
+			<div>
+				<a href="#" class="boton_azul">Build</a>
+				<a href="#" class="boton_blanco">Share</a>
+				<a href="#" class="boton_blanco">Run</a>
+				<a href="#" class="boton_blanco">Verify</a>
+			</div>
+			<div class="dual">
+				<div>
+					<h3>Build</h3>
+					<h4>Spin up new environments quickly</h4>
+					<p>Develop your own unique applications with Docker images and create multiple containers using Docker Compose.</p>
+					<h4>Integrate with your existing tools</h4>
+					<p>Docker works with all development tools such as VS Code, CircleCI, and GitHub.</p>
+					<h4>Containerize applications for consistency</h4>
+					<p>Run in any environment consistently from on-premises Kubernetes to AWS ECS, Azure ACI, Google GKE, and more.</p>
+				</div>
+				<div>
+					<img src="home-3-accelerate-1-build.svg">
+				</div>
+			</div>
+		</section>
+		<section>
+			<p class="colorgrad">Why use docker?</p>
+			<p>Trusted by developers.</p>
+			<p>Chosen by Fortune 100 companies.</p>
+			<p>Docker provides a suite of development tools, services, trusted content, and automations, used individually or together, to accelerate the delivery of secure applications.</p>
+			<div class="logos">
+				<div><img src="logo-box-verizon.svg"></div>
+				<div><img src="logo-box-arrow.svg"></div>
+				<div><img src="logo-box-splunk.svg"></div>
+				<div><img src="logo-box-att.svg"></div>
+				<div><img src="logo-box-yale.svg"></div>
+				<div><img src="logo-box-blue-apron.svg"></div>
+				<div><img src="logo-box-stripe.svg"></div>
+				<div><img src="logo-box-paypal.svg"></div>
+			</div>
+			<div class="stats">
+				<div>
+					<p class="colorgrad">20M+</p>
+					<p>monthly developers</p>
+				</div>
+				<div>
+					<p class="colorgrad">7M+</p>
+					<p>applications</p>
+				</div>
+				<div>
+					<p class="colorgrad">20B+</p>
+					<p>monthly image pulls</p>
+				</div>
+			</div>
+			<div class="dual">
+				<div >
+					<h5 class="colorgrad">Container development</h5>
+					<h3>New to containers?</h3>
+					<p>We got you covered! Get started with the basics with our guide to containers, including what they are, their advantage over virtual machines, and more.</p>
+					<a href="#">Read the container guide</a>
+				</div>
+				<div><img src="home-6-hero-2.svg"></div>
+			</div>
+			<div class="columna">
+				<img src="cards.png">
+				<p class="colorgrad">Connect</p>
+				<p>Meet the community</p>
+				<p>Stop by any of the hundreds of meetups around the world for in-person banter or join our Slack and Discourse for virtual peer support. Our Docker Captains are also a great source of developer insight and expertise.</p>
+				<a href="#">Connect with us</a>
+				<p>Join our open source program</p>
+				<p>Our Docker-Sponsored Open Source program is ideal for developers working on non-commercial projects.</p>
+				<a href="#">Apply today</a>
+			</div>
+		</section>
+		<section>
+			<div>
+				<h2>Develop from code to cloud with partners that you trust</h2>
+				<p>Our partnerships ensure that your development pipeline network will work in your preferred environment — whether local or in the cloud.</p>
+				<a href="#">Our trusted partners</a>
+			</div>
+			<div>
+				<div>
+					<img src="logo-aws-amazon.svg">
+					<p>Simplify the development of your multi-container applications from Docker CLI to Amazon EKS and Serverless.</p>
+				</div>
+				<div>
+					<img src="logo-azure-1.svg">
+					<p>Seamlessly bring container applications from your local machine and run them in Azure Container Instances.</p>
+				</div>
+				<div>
+					<img src="logo-Jfrog_Green_RGB.svg">
+					<p>Easily distribute and share Docker images with the JFrog Artifactory image repository and integrate all of your development tools.</p>
+				</div>
+			</div>
+			<div>
+				<p>Integrate with your favorite tools and images</p>
+			</div>
+			<div class="logos">
+				<div><img src="gitlab-logo.svg"></div>
+				<div><img src="mongodb-logo.svg"></div>
+				<div><img src="circleci-logo.svg"></div>
+				<div><img src="github-logo.svg"></div>
+				<div><img src="redis-logo.svg"></div>
+				<div><img src="nginx-logo.svg"></div>
+				<div><img src="jfrog-logo.svg"></div>
+				<div><img src="kubernetes-logo.svg"></div>
+				<div><img src="elastic-logo.svg"></div>
+				<div><img src="bitbucket-logo.svg"></div>
+			</div>
+		</section>
+		<section>
+
+		</section>
 	</main>
 	<footer>
-	
+	<div>
+				<p>How to get started</p>
+				<p>Your path to accelerated application development starts here.</p>
+			</div>
+			<div>
+				<div>
+					<img src="icon-docker-square.svg">
+					<p>Download Docker</p>
+					<p>Learn how to install Docker for Mac, Windows, or Linux and explore our developer tools.</p>
+					<a href="#">Get started</a>
+				</div>
+				<div>
+					<img src="icon-container.svg">
+					<p>Containerize your first app</p>
+					<p>Develop a solid understanding of the Docker basics with our step-by-step developer guide.</p>
+					<a href="#">Learn Docker</a>
+				</div>
+				<div>
+					<img src="icon-upload-cloud.svg">
+					<p>Publish your image on Docker Hub</p>
+					<p>Share your application with the world (or other developers on your team).</p>
+					<a href="#">Sign up for free</a>
+				</div>
+			</div>
+			<div>
+				<div>
+					<p>Choose a subscription that’s right for you</p>
+					<p>Find your perfect balance of collaboration, security, and support with a Docker subscription.</p>
+				</div>
+				<div>
+					<a href="#">Find pricing</a>
+				</div>
+			</div>
 	</footer>
 </body>
 </html>
