Estructura html y fotos completa, falta ajustar posicionamiento

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 		</section>
 	</main>
 	<footer>
-		<div class="repartido">
+		<div>
 			<div class="columna">
 				<img src="docker_logo.png">
 			</div>
