Estructura responsive hasta la cuarta section

--- a/index.html
+++ b/index.html
@@ -44,17 +44,19 @@
 			</div>
 		</section>
 		<section>
+			<div class="columna_unica">
 			<p class="colorgrad">What is docker?</p>
 			<p>Accelerate how you build, share, and run applications</p>
 			<p>Docker helps developers build, share, run and verify applications anywhere - whithout tedious enviroment configuration or management.</p>
-			<div>
-				<a href="#" class="boton_azul"><img src="icon-build.svg">Build</a>
-				<a href="#" class="boton_blanco"><img src="icon-share.svg">Share</a>
-				<a href="#" class="boton_blanco"><img src="icon-run.svg">Run</a>
-				<a href="#" class="boton_blanco"><img src="icon-verify.svg">Verify</a>
 			</div>
-			<div class="dual">
-				<div>
+			<div class="botones">
+				<a href="#" class="boton_azul_redondo"><img src="icon-build.svg">Build</a>
+				<a href="#" class="boton_blanco_redondo"><img src="icon-share.svg">Share</a>
+				<a href="#" class="boton_blanco_redondo"><img src="icon-run.svg">Run</a>
+				<a href="#" class="boton_blanco_redondo"><img src="icon-verify.svg">Verify</a>
+			</div>
+			<div class="columna_dual">
+				<div class="ancho400">
 					<h3>Build</h3>
 					<h4>Spin up new environments quickly</h4>
 					<p>Develop your own unique applications with Docker images and create multiple containers using Docker Compose.</p>
@@ -63,16 +65,18 @@
 					<h4>Containerize applications for consistency</h4>
 					<p>Run in any environment consistently from on-premises Kubernetes to AWS ECS, Azure ACI, Google GKE, and more.</p>
 				</div>
-				<div>
+				<div class="ancho400">
 					<img src="home-3-accelerate-1-build.svg">
 				</div>
 			</div>
 		</section>
 		<section>
+			<div class="columna_unica">
 			<p class="colorgrad">Why use docker?</p>
 			<p>Trusted by developers.</p>
 			<p>Chosen by Fortune 100 companies.</p>
 			<p>Docker provides a suite of development tools, services, trusted content, and automations, used individually or together, to accelerate the delivery of secure applications.</p>
+			</div>
 			<div class="logos">
 				<div><img src="logo-box-verizon.svg"></div>
 				<div><img src="logo-box-arrow.svg"></div>
@@ -97,16 +101,18 @@
 					<p>monthly image pulls</p>
 				</div>
 			</div>
-			<div class="dual">
-				<div >
+			<div class="columna_dual">
+				<div class="ancho700">
 					<h5 class="colorgrad">Container development</h5>
 					<h3>New to containers?</h3>
 					<p>We got you covered! Get started with the basics with our guide to containers, including what they are, their advantage over virtual machines, and more.</p>
 					<a href="#">Read the container guide</a>
 				</div>
-				<div><img src="home-6-hero-2.svg"></div>
+				<div class="ancho175">
+					<img src="home-6-hero-2.svg">
+				</div>
 			</div>
-			<div class="columna">
+			<div class="columna_unica">
 				<img src="cards.png">
 				<p class="colorgrad">Connect</p>
 				<p>Meet the community</p>
@@ -124,15 +130,15 @@
 				<a href="#">Our trusted partners</a>
 			</div>
 			<div>
-				<div class="columna">
+				<div class="columna_grupo">
 					<img src="logo-aws-amazon.svg">
 					<p>Simplify the development of your multi-container applications from Docker CLI to Amazon EKS and Serverless.</p>
 				</div>
-				<div class="columna">
+				<div class="columna_grupo">
 					<img src="logo-azure-1.svg">
 					<p>Seamlessly bring container applications from your local machine and run them in Azure Container Instances.</p>
 				</div>
-				<div class="columna">
+				<div class="columna_grupo">
 					<img src="logo-Jfrog_Green_RGB.svg">
 					<p>Easily distribute and share Docker images with the JFrog Artifactory image repository and integrate all of your development tools.</p>
 				</div>
@@ -141,17 +147,20 @@
 				<p>Integrate with your favorite tools and images</p>
 			</div>
 			<div class="logos">
-				
+				<div>
 					<div><img src="gitlab-logo.svg"></div>
 					<div><img src="mongodb-logo.svg"></div>
 					<div><img src="circleci-logo.svg"></div>
 					<div><img src="github-logo.svg"></div>
 					<div><img src="redis-logo.svg"></div>	
+				</div>
+				<div>	
 					<div><img src="nginx-logo.svg"></div>
 					<div><img src="jfrog-logo.svg"></div>
 					<div><img src="kubernetes-logo.svg"></div>
 					<div><img src="elastic-logo.svg"></div>
 					<div><img src="bitbucket-logo.svg"></div>
+				</div>	
 			</div>
 		</section>
 		<section>
@@ -184,7 +193,7 @@
 					<p>Choose a subscription that’s right for you</p>
 					<p>Find your perfect balance of collaboration, security, and support with a Docker subscription.</p>
 				</div>
-				<div class="boton_blanco">
+				<div class="boton_blanco_redondo">
 					<a href="#">Find pricing</a>
 				</div>
 			</div>
@@ -195,7 +204,7 @@
 			<div class="columna">
 				<img src="docker_logo.png">
 			</div>
-			<div class="columna">
+			<div class="footer_columna">
 				<p><a href="#">Products</a></p>
 				<p><a href="#">Docker Desktop</a></p>
 				<p><a href="#">Docker Hub</a></p>
@@ -212,7 +221,7 @@
 				<p><a href="#">Support</a></p>
 				<p><a href="#">Product Roadmap</a></p>
 			</div>
-			<div class="columna">
+			<div class="footer_columna">
 				<p><a href="#">Developers</a></p>
 				<p><a href="#">Documentation</a></p>
 				<p><a href="#">Getting Started</a></p>
@@ -223,7 +232,7 @@
 				<p><a href="#">Preview Program</a></p>
 				<p><a href="#">System Status</a></p>
 			</div>
-			<div class="columna">
+			<div class="footer_columna">
 				<p><a href="#">Pricing</a></p>
 				<p><a href="#">Personal</a></p>
 				<p><a href="#">Pro</a></p>
@@ -232,11 +241,11 @@
 				<p><a href="#">Pricing FAQ</a></p>
 				<p><a href="#">Contact Sales</a></p>
 			</div>
-			<div class="columna">
+			<div class="footer_columna">
 				<p><a href="#">Blog</a></p>
 				<p><a href="#">Newsletter</a></p>
 			</div>
-			<div class="columna">
+			<div class="footer_columna">
 				<span>
 					<p><a href="#">Company</a></p>
 					<p><a href="#">About Us</a></p>
