Estructura responsive hasta el footer

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 		</section>
 		<section>
 			<div class="columna_unica">
-			<p class="colorgrad">Why use docker?</p>
-			<p>Trusted by developers.</p>
-			<p>Chosen by Fortune 100 companies.</p>
-			<p>Docker provides a suite of development tools, services, trusted content, and automations, used individually or together, to accelerate the delivery of secure applications.</p>
+			<span><h2 class="colorgrad">Why use docker?</h2></span>
+			<h3>Trusted by developers.</h3>
+			<h3>Chosen by Fortune 100 companies.</h3>
+			<span><p>Docker provides a suite of development tools, services, trusted content, and automations, used individually or together, to accelerate the delivery of secure applications.</p></span>
 			</div>
 			<div class="logos">
 				<div><img src="logo-box-verizon.svg"></div>
@@ -114,22 +114,22 @@
 			</div>
 			<div class="columna_unica">
 				<img src="cards.png">
-				<p class="colorgrad">Connect</p>
-				<p>Meet the community</p>
-				<p>Stop by any of the hundreds of meetups around the world for in-person banter or join our Slack and Discourse for virtual peer support. Our Docker Captains are also a great source of developer insight and expertise.</p>
+				<span><h2 class="colorgrad">Connect</h2></span>
+				<h3>Meet the community</h3>
+				<span><p>Stop by any of the hundreds of meetups around the world for in-person banter or join our Slack and Discourse for virtual peer support. Our Docker Captains are also a great source of developer insight and expertise.</p></span>
 				<a href="#">Connect with us</a>
-				<p>Join our open source program</p>
-				<p>Our Docker-Sponsored Open Source program is ideal for developers working on non-commercial projects.</p>
+				<h4>Join our open source program</h4>
+				<span><p>Our Docker-Sponsored Open Source program is ideal for developers working on non-commercial projects.</p></span>
 				<a href="#">Apply today</a>
 			</div>
 		</section>
 		<section class="oscuro">
 			<div class="columna">
-				<h2>Develop from code to cloud with partners that you trust</h2>
+				<h3>Develop from code to cloud with partners that you trust</h3>
 				<p>Our partnerships ensure that your development pipeline network will work in your preferred environment — whether local or in the cloud.</p>
 				<a href="#">Our trusted partners</a>
 			</div>
-			<div>
+			<div class="grupo">
 				<div class="columna_grupo">
 					<img src="logo-aws-amazon.svg">
 					<p>Simplify the development of your multi-container applications from Docker CLI to Amazon EKS and Serverless.</p>
@@ -168,20 +168,20 @@
 				<p>How to get started</p>
 				<p>Your path to accelerated application development starts here.</p>
 			</div>
-			<div>
-				<div class="columna">
+			<div class="grupo">
+				<div class="columna_grupo">
 					<img src="icon-docker-square.svg">
 					<p>Download Docker</p>
 					<p>Learn how to install Docker for Mac, Windows, or Linux and explore our developer tools.</p>
 					<a href="#">Get started</a>
 				</div>
-				<div class="columna">
+				<div class="columna_grupo">
 					<img src="icon-container.svg">
 					<p>Containerize your first app</p>
 					<p>Develop a solid understanding of the Docker basics with our step-by-step developer guide.</p>
 					<a href="#">Learn Docker</a>
 				</div>
-				<div class="columna">
+				<div class="columna_grupo">
 					<img src="icon-upload-cloud.svg">
 					<p>Publish your image on Docker Hub</p>
 					<p>Share your application with the world (or other developers on your team).</p>
@@ -201,7 +201,7 @@
 	</main>
 	<footer>
 		<div class="repartido">
-			<div class="columna">
+			<div class="footer_columna">
 				<img src="docker_logo.png">
 			</div>
 			<div class="footer_columna">
