Toda la estructura completa menos el footer

--- a/index.html
+++ b/index.html
@@ -165,32 +165,32 @@
 		</section>
 		<section>
 			<div class="columna">
-				<p>How to get started</p>
+				<h3 class="colorgrad">How to get started</h3>
 				<p>Your path to accelerated application development starts here.</p>
 			</div>
 			<div class="grupo">
 				<div class="columna_grupo">
 					<img src="icon-docker-square.svg">
 					<p>Download Docker</p>
-					<p>Learn how to install Docker for Mac, Windows, or Linux and explore our developer tools.</p>
+					<span><p>Learn how to install Docker for Mac, Windows, or Linux and explore our developer tools.</p></span>
 					<a href="#">Get started</a>
 				</div>
 				<div class="columna_grupo">
 					<img src="icon-container.svg">
 					<p>Containerize your first app</p>
-					<p>Develop a solid understanding of the Docker basics with our step-by-step developer guide.</p>
+					<span><p>Develop a solid understanding of the Docker basics with our step-by-step developer guide.</p></span>
 					<a href="#">Learn Docker</a>
 				</div>
 				<div class="columna_grupo">
 					<img src="icon-upload-cloud.svg">
 					<p>Publish your image on Docker Hub</p>
-					<p>Share your application with the world (or other developers on your team).</p>
+					<span><p>Share your application with the world (or other developers on your team).</p></span>
 					<a href="#">Sign up for free</a>
 				</div>
 			</div>
-			<div class="boton_azul">
+			<div class="caja_azul">
 				<div class="columna">
-					<p>Choose a subscription that’s right for you</p>
+					<h4>Choose a subscription that’s right for you</h4>
 					<p>Find your perfect balance of collaboration, security, and support with a Docker subscription.</p>
 				</div>
 				<div class="boton_blanco_redondo">
