--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 				</span>
 			</div>
 		</div>
-		<div class="repartido">
+		<div class="iconos_repartidos">
 			<div class="iconos">
 				<img src="docker-social-twitter.svg">
 				<img src="docker-social-linkedin.svg">
